MEM-262 - Ad-hoc Edits - MMTI
- Fixed some issues with colliding elements on mobile
- Cleaning up some spacing on longer text pages

--- a/modules/connect/client/views/connect-with-us.html
+++ b/modules/connect/client/views/connect-with-us.html
@@ -39,7 +39,7 @@
         </main>
         <aside class="col-lg-4">
             <section>
-                <h4>Contact Us</h4>
+                <h4>External Links &amp; Resources</h4>
                 <ul class="mmti-list">
                     <li>
                         <a href="http://www2.gov.bc.ca/gov/content/governments/organizational-structure/ministries-organizations/ministries/energy-and-mines" target="_blank">Ministy of Energy &amp; Mines</a>
