--- a/modules/lifecycle/client/views/mining-lifecycle.html
+++ b/modules/lifecycle/client/views/mining-lifecycle.html
@@ -43,14 +43,14 @@
                 <p>The operation phase begins once a mine is constructed and starts producing. Mining operations include extraction and processing of ore as well as waste disposal and ore transport.</p>
                 <p><a ui-sref="reclamation-and-securities">Progressive reclamation</a> begins during the mine construction phase and continues until a site is fully reclaimed after mine closure.</p>
             </section>
-            <section>
+            <section class="mb-0">
                 <h3>Closure</h3>
                 <p>Mine closure is the final phase of the mining lifecycle. A mine’s life comes to an end once production reserves are exhausted or it is no longer economically viable to continue extracting resources from the site. Shutdown and decommissioning of a mine involves removing equipment (e.g., vehicles, processing equipment), dismantling facilities (e.g., mills, workers’ quarters) and safely closing all mine workings. <a ui-sref="authorizations({'#': 'minesActPermits'})">Mines Act permits</a> include site-specific conditions regarding detailed closure and reclamation plans.</p>
                 <p class="mb-0">Because increases in commodity prices and advances in technology can improve the economic viability of mining a deposit, closed mines are sometimes re-opened. When companies want to re-open or re-develop a major mine that has been closed for many years, they usually need to begin the <a ui-sref="authorizations">authorizations</a> process anew.</p>
             </section>
         </main>
         <aside class="col-lg-4">
-            <section class="mt-0">
+            <section>
                 <h4>Ongoing Lifecycle Activities</h4>
                 <div class="section-body">
                     <h5>Reclamation</h5>
