--- a/modules/projects/client/scss/projects.scss
+++ b/modules/projects/client/scss/projects.scss
@@ -45,7 +45,7 @@
     .sh-col,
     .ah-col {
         &.commodity {
-            width: 9.5rem;
+            width: 7.5rem;
             text-align: right;
         }
 
@@ -62,6 +62,10 @@
     .mine-list {
         .sh-col,
         .ah-col {
+            &.commodity {
+                width: 9.5rem;
+            }
+
             &.operator {
                 display: table-cell;
             }
@@ -84,6 +88,36 @@
             float: left;
             display: block;
             width: 50%;
+        }
+    }
+}
+
+.mine-list-btns {
+    .btn {
+        margin-top: 0.5rem;
+        width: 100%;
+
+        &:first-child {
+            margin-top: 0;
+        }
+    }
+}
+
+@media (min-width: 760px) {
+    .mine-list-btns {
+        @include flex-box();
+
+        .btn {
+            @include flex(1 1 auto);
+            margin-top: 0;
+            
+            &:first-child {
+                margin-right: 0.25rem;
+            }
+
+            &:last-child {
+                margin-left: 0.25rem;
+            }
         }
     }
 }
