--- a/modules/home/client/views/home.html
+++ b/modules/home/client/views/home.html
@@ -7,6 +7,7 @@
                 <h1>British Columbia <span>Mine Information</span><span class="badge" id="alpha" title="What is this?">BETA</span></h1>
                 <p>Mining is one of British Columbia’s oldest and most dynamic industries. The Province of British Columbia is committed to continuing to provide effective oversight of this important sector.</p>
                 <div class="hb-btns">
+                    <strong>Find Mines in British Columbia...</strong>
                     <a class="btn slide-l-btn hero-btn inverted" ui-sref="projects"><i class="material-icons">list</i><span>View List</span></a>
                     <span>or</span>
                     <a class="btn slide-l-btn hero-btn inverted" ui-sref="maps" x-project="projects"><i class="material-icons">map</i><span>View Map</span></a>
@@ -84,9 +85,9 @@
                 <div class="col-md-4">
                     <div class="feature-block">
                         <h3>Find Mines in B.C.</h3>
-                        <p>The BC Mine Information website’s interactive map currently includes 15 mine sites</p>
+                        <p>The BC Mine Information website currently profiles 15 major mines</p>
                         <a class="btn inverted" ui-sref="projects">View List</a>
-                        <span>&nbsp;or&nbsp;</span>
+                        <span>&nbsp;</span>
                         <a class="btn inverted" ui-sref="maps">View Map</a>
                     </div>
                 </div>
