--- a/modules/legislation/client/views/legislation.html
+++ b/modules/legislation/client/views/legislation.html
@@ -17,6 +17,7 @@
                 <h2>Key Statutes and Regulations for Mining <span>in British Columbia</span></h2>
                 <p>Mining activities in British Columbia are subject to a variety of different provincial and federal regulations. The main pieces of legislation that govern major mines in BC are the Environmental Assessment Act, the Mines Act and the Environmental Management Act. You can learn more about these acts and others below. Please note that this is not meant to be an exhaustive list of all regulations that apply to mining activities.</p>
             </section>
+            <hr>
             <section>
                 <h3>Provincial Statutes</h3>
                 <section class="mt-0">
@@ -109,6 +110,7 @@
                     </ul>
                 </section>
             </section>
+            <hr>
             <section>
                 <h3>Federal Statutes</h3>
                 <section>
@@ -119,9 +121,9 @@
                     <h4>Canadian Environmental Act</h4>
                     <p>The Canadian Environmental Assessment Agency conducts reviews of major projects across Canada, including major mine projects in British Columbia, under the <a href="http://laws-lois.justice.gc.ca/eng/acts/c-15.21/index.html" target=_"blank">Canadian Environmental Assessment Act, 2012</a>.</p>
                 </section>
-                <section>
+                <section class="mb-0">
                     <h4>Other Federal Statutes</h4>
-                    <ul>
+                    <ul class="mb-0">
                         <li><a href="http://laws-lois.justice.gc.ca/eng/acts/c-15.31/" target="_blank">Canadian Environmental Protection Act</a></li>
                         <li><a href="http://laws-lois.justice.gc.ca/eng/acts/M-7.01/" target="_blank">Migratory Birds Convention Act</a></li>
                         <li><a href="http://laws-lois.justice.gc.ca/eng/acts/N-22/" target="_blank">Navigation Protection Act</a></li>
