--- a/modules/authorizations/client/views/authorizations.html
+++ b/modules/authorizations/client/views/authorizations.html
@@ -28,11 +28,13 @@
                 <p>Authorizations issued under these three acts are available on this website.</p>
                 <p>Established in late 2014, the Ministy of Energy and Mines <a href="http://www2.gov.bc.ca/gov/content/industry/mineral-exploration-mining/permitting/major-mine-permitting-office" target="_blank">Major Mine Permitting Office (MMPO)</a> improves the co-ordination of major mine permitting across British Columbia. MMPO brings clear accountability to both industry and government to ensure timely and durable decisions are made with respect to permitting major mine projects around the province.</p>
             </section>
+            <hr>
             <section class="pg-anchor" id="eaProcess">
                 <h3>Environmental Assessment (EA) Process</h3>
                 <p>Proposed major mines and major expansions to existing mines in British Columbia typically require environmental assessment (EA) certificates. The <a href="http://www.eao.gov.bc.ca/" target="_blank">Environmental Assessment Office (EAO)</a> is a neutral agency that manages the assessment of proposed major projects in BC as required by the <a href="http://www.bclaws.ca/civix/document/id/consol14/consol14/00_02043_01" target="_blank">Environmental Assessment Act</a>. BC has a rigourous EA process that carefully evaluates the potential environmental, economic, social, heritage and health impacts of proposed projects, as well as potential impacts to First Nations interests. Proposed mine projects in BC above production thresholds set out in the <a href="http://www.bclaws.ca/civix/document/id/loo79/loo79/13_370_2002" target="_blank">Reviewable Projects Regulation</a> of the Environmental Assessment Act automatically trigger the provincial EA process. Project proponents can also “opt in” to the EA process, and the Minister of Environment has the power to designate a project as reviewable.</p>
                 <p>For more information on the BC EA process, please visit <a href="http://www.eao.gov.bc.ca/ea_process.html" target="_blank">http://www.eao.gov.bc.ca/ea_process.html</a> or refer to the <a href="http://www.eao.gov.bc.ca/pdf/EAO_User_Guide_20150629.pdf" target="_blank">EAO User Guide.</a></p>
             </section>
+            <hr>
             <section id="majorPermits">
                 <h3>Major Permits</h3>
                 <p>The Ministry of Energy and Mines (MEM) and the Ministry of Environment (ENV) have developed a document to outline the information that mining project proponents are required to submit in support of a joint application for a Mines Act permit and a waste discharge permit issued under the Environmental Management Act (EMA). This document is intended for both new and existing major mines, including proposed major expansions/extensions of mining projects. The combined technical information requirements are intended to reduce overlap in technical information required by both ministries and enable one application, or bundled applications, to be submitted for review. While this document is aimed at proponents, it may also serve as a resource to anyone interested in learning more about the kind of information required during the mine permitting process.</p>
@@ -59,7 +61,8 @@
                     <li><a href="http://www2.gov.bc.ca/gov/content/environment/waste-management/waste-discharge-authorization" target="_blank">More on EMA permits and approval processes</a></li>
                 </ul>
             </section>
-            <section id="otherAuths">
+            <hr>
+            <section class="mb-0" id="otherAuths">
                 <h3>Other Authorizations for Mining Projects in BC</h3>
                 <h4 class="pg-anchor" id="tenureAuths">Tenure Authorizations</h4>
                 <p>In British Columbia, sub-surface rights are different from surface rights, and, like proponents of other industrial activities, mining project proponents are required to apply for tenures. The Mineral Titles Branch of the Ministry of Energy and Mines administers the legislation governing the acquisition, exploration and development of mineral, placer mineral, and coal rights in the province. The branch maintains the coal and mineral titles registries under the <a href="http://www.bclaws.ca/civix/document/id/complete/statreg/96292_01" target="_blank">Mineral Tenure Act</a> and the <a href="http://www.bclaws.ca/civix/document/id/complete/statreg/00_04015_01" target="_blank">Coal Act</a> and associated regulations, and issues licences and leases.</p>
@@ -79,7 +82,7 @@
                 </ul>
                 <p>To learn more about authorizations issued by FLNRO, please visit the <a href="https://portal.nrs.gov.bc.ca/web/client/home" target="_blank">Natural Resource Sector Online Services portal.</a></p>
                 <h4>Federal Government Authorizations</h4>
-                <ul>
+                <ul class="mb-0">
                     <li>Most major mines in British Columbia require <a href="http://laws-lois.justice.gc.ca/eng/acts/f-14/" target="_blank">Fisheries Act</a> authorizations</li>
                     <li>The Canadian Environmental Assessment Agency (CEAA) conducts reviews of major projects across Canada, including major mine projects in British Columbia, under the <a href="http://laws-lois.justice.gc.ca/eng/acts/c-15.21/index.html" target="_blank">Canadian Environmental Assessment Act, 2012</a>. If a major mine project is deemed reviewable by CEAA, it requires federal environmental assessment (EA) approval. <a href="http://www.eao.gov.bc.ca/federal_relations.html" target="_blank">Learn about federal-provincial EA relations</a>.</li>
                     <li>Other federally managed statutes may also apply to major mine projects in British Columbia, and authorizations under these statutes may be required.</li>
