MEM-297 MMTI-'Connect with Us' Page Design
- Implementing confirmation modal

--- a/modules/connect/client/views/connect-with-us.html
+++ b/modules/connect/client/views/connect-with-us.html
@@ -1,10 +1,10 @@
-
 <div class="hero-banner">
     <div class="container">
         <div class="container-inner">
             <div class="hb-txt">
-                <h1>Connect with Us</h1>
-                <p class="mb-2">BC Mine Information is continuously evolving. More information and features will be added to the site on an ongoing basis and we welcome feedback to help us decide what would be most valuable.</p>
+                <h1>Connect With Us</h1>
+                <p class="mb-2">BC Mine Information is continuously evolving. More information and features will be added to the site on
+                    an ongoing basis and we welcome feedback to help us decide what would be most valuable.</p>
             </div>
         </div>
     </div>
@@ -14,7 +14,9 @@
     <div class="row">
         <main class="col-lg-8">
             <h2>Help Us Build a Better Service</h2>
-            <p>Thank you for visiting the new BC Mine Information website. More information and features will be added to this site on an ongoing basis, and the design will be continuously refined to improve user experience. Suggestions on how to make this website better can be submitted via the form below.</p>
+            <p>Thank you for visiting the new BC Mine Information website. More information and features will be added to this
+                site on an ongoing basis, and the design will be continuously refined to improve user experience. Suggestions
+                on how to make this website better can be submitted via the form below.</p>
             <form>
                 <div class="form-group">
                     <label>Your Name</label>
@@ -33,7 +35,7 @@
                     <input type="text" name="subject">
                 </div>
                 <div class="form-btns">
-                    <button class="btn slide-r-btn submit-btn"><span>Submit Feedback</span><i class="material-icons">send</i></button>
+                    <button class="btn slide-r-btn submit-btn" data-toggle="modal" data-target="#exampleModal"><span>Submit Feedback</span><i class="material-icons">send</i></button>
                 </div>
             </form>
         </main>
@@ -42,10 +44,12 @@
                 <h4>External Links &amp; Resources</h4>
                 <ul class="mmti-list">
                     <li>
-                        <a href="http://www2.gov.bc.ca/gov/content/governments/organizational-structure/ministries-organizations/ministries/energy-and-mines" target="_blank">Ministy of Energy &amp; Mines</a>
+                        <a href="http://www2.gov.bc.ca/gov/content/governments/organizational-structure/ministries-organizations/ministries/energy-and-mines"
+                            target="_blank">Ministy of Energy &amp; Mines</a>
                     </li>
                     <li>
-                        <a href="http://www2.gov.bc.ca/gov/content/governments/organizational-structure/ministries-organizations/ministries/environment" target="_blank">Ministry of Environment</a>
+                        <a href="http://www2.gov.bc.ca/gov/content/governments/organizational-structure/ministries-organizations/ministries/environment"
+                            target="_blank">Ministry of Environment</a>
                     </li>
                     <li>
                         <a href="http://www.eao.gov.bc.ca/" target="_blank">Environmental Assessment Office</a>
@@ -53,5 +57,20 @@
                 </ul>
             </section>
         </aside>
+    </div>
+</div>
+
+<!-- Confirmation Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-body">
+               <h2>Thank you for your Feedback!</h2>
+               <p>Your feedback has been sent.</p>
+               <div>
+                   <button class="ok-btn btn submit-btn" type="button" data-dismiss="modal">Close</button>
+               </div>
+            </div>
+        </div>
     </div>
 </div>
