--- a/modules/connect/client/scss/connect-with-us.scss
+++ b/modules/connect/client/scss/connect-with-us.scss
@@ -22,3 +22,21 @@ form {
     font-size: 0.9375rem;
     font-weight: 400;
 }
+
+.modal-dialog {
+    width: 22rem;
+}
+
+.modal-body {
+    padding: 2rem;
+    text-align: center;
+
+    h2 {
+        margin-bottom: 1rem;
+    }
+
+    .ok-btn {
+        padding: 0.75rem 1rem;
+        width: 100%;
+    }
+}
