--- a/modules/connect/client/views/connect-with-us.html
+++ b/modules/connect/client/views/connect-with-us.html
@@ -17,26 +17,29 @@
             <p>Thank you for visiting the new BC Mine Information website. More information and features will be added to this
                 site on an ongoing basis, and the design will be continuously refined to improve user experience. Suggestions
                 on how to make this website better can be submitted via the form below.</p>
-            <form>
-                <div class="form-group">
+            <form name="commentForm" >
+                <div class="form-group" x-show-errors>
                     <label>Your Name</label>
-                    <input class="form-control" placeholder="Enter your Name" type="text" />
+                    <input class="form-control" placeholder="Enter your Name" type="text" name="name" ng-model="comment.name" required/>
                 </div>
-                <div class="form-group">
+                <div class="form-group" x-show-errors>
                     <label>Email Address</label>
-                    <input class="form-control" placeholder="Enter your Email Address" type="text" />
+                    <input class="form-control" placeholder="Enter your Email Address" type="email" name="email" ng-model="comment.email" required/>
                 </div>
-                <div class="form-group">
+                <div class="form-group" x-show-errors>
                     <label>Your Feedback</label>
-                    <textarea class="form-control" placeholder="Enter your message" rows="6"></textarea>
+                    <textarea class="form-control" placeholder="Enter your message" rows="6" name="comment" ng-model="comment.comment" required></textarea>
                 </div>
                 <div class="form-group" style="display: none;">
                     <label>Leave this field blank</label>
                     <input type="text" name="subject">
                 </div>
-                <div class="form-btns">
-                    <button class="btn slide-r-btn submit-btn" data-toggle="modal" data-target="#exampleModal"><span>Submit Feedback</span><i class="material-icons">send</i></button>
+                <div ng-if="!busy" class="form-btns">
+                    <button class="btn slide-r-btn submit-btn" ng-click="save(commentForm.$valid)" >
+                        <span>Submit Feedback</span> <i class="material-icons">send</i>
+                    </button>
                 </div>
+                <div ng-if="busy"><span>Sending</span></div>
             </form>
         </main>
         <aside class="col-lg-4">
@@ -61,14 +64,14 @@
 </div>
 
 <!-- Confirmation Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="thanksModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-body">
                <h2>Thank you for your Feedback!</h2>
                <p>Your feedback has been sent.</p>
                <div>
-                   <button class="ok-btn btn submit-btn" type="button" data-dismiss="modal">Close</button>
+                   <button class="ok-btn btn submit-btn" type="button" ng-click="userConfirmed()" data-dismiss="modal">Close</button>
                </div>
             </div>
         </div>
