Fixing an issue with the connect with us confirmation dialog styling

--- a/modules/connect/client/scss/connect-with-us.scss
+++ b/modules/connect/client/scss/connect-with-us.scss
@@ -40,3 +40,17 @@ form {
         width: 100%;
     }
 }
+
+
+/* Temp Fix for Modals */
+.modal-backdrop.fade {
+    opacity: 0.5 !important;
+}
+
+.modal.fade {
+    opacity: 1 !important;
+
+    .modal-dialog {
+        transform: none !important;
+    }
+}
