ESM-729, ESM-853: Change to Document Types code list (which turned into doing other pick lists).  Put codes in db via seed, allow sorting and active flag.  Add service to populate on load of app and manage in app (no management ui yet).  Add helper functions for display text.  Update all uses in display forms, add/edit forms, tables.  Not every single code list, but all the ones specified in the ticket by Geoff.

--- a/modules/documents/client/views/document-manager-edit.html
+++ b/modules/documents/client/views/document-manager-edit.html
@@ -23,7 +23,7 @@
 			<label class="control-label" for="documentType">Document Type</label>
 			<select class="form-control" title="Document Type" id="documentType" name="documentType"
 				ng-model="doc.documentType"
-				ng-options="type for type in types"
+				ng-options="item.value as item.display for item in types"
 				ng-change="validate()"></select>
 		</div>
 
@@ -37,7 +37,7 @@
 				<label for="followup" class="control-label">Follow Up</label>
 				<select class="form-control" title="Document Type" id="followup" name="followup"
 						ng-model="doc.inspectionReport.followup"
-						ng-options="type for type in inspectionReportFollowupTypes"
+						ng-options="item.value as item.display for item in inspectionReportFollowupTypes"
 						ng-change="validate()"></select>
 			</div>
 		</div>
