--- a/modules/groups/client/views/group-list.html
+++ b/modules/groups/client/views/group-list.html
@@ -25,7 +25,7 @@
 					header-class="'artifacts-col'"
 					data-title="'Type'"
 					filter="{'type':'text'}"
-					sortable="'type'">{{o.type}}</td>
+					sortable="'type'">{{projectGroupTypes.display(o.type)}}</td>
 				<td class="members-col"
 					header-class="'members-col'"
 					data-title="'Members'"
