--- a/modules/groups/client/views/group-view.html
+++ b/modules/groups/client/views/group-view.html
@@ -17,7 +17,7 @@
 		</div>
 		<div class="detail-row">
 			<label>Group Type</label>
-			<span class="value">{{s.group.type}}</span>
+			<span class="value">{{projectGroupTypes.display(s.group.type)}}</span>
 		</div>
 	</div>
 
