--- a/modules/project-comments/client/views/public-comments/list.html
+++ b/modules/project-comments/client/views/public-comments/list.html
@@ -59,7 +59,7 @@
 				<th class="'attachment-col no-mobile'" st-sort="dateAdded">Date Posted</th>
 			</tr>
 			<tr>
-				<th ng-if="authentication.user"><input st-search="commentId" ng-model="s.filterByFields.commentId"/></th>
+				<th ng-if="authentication.user"><input class="input-sm form-control" st-search="commentId" ng-model="s.filterByFields.commentId"/></th>
 				<th><input class="input-sm form-control" st-search="authorComment" ng-model="s.filterByFields.authorComment"/></th>
 				<th><input class="input-sm form-control" st-search="location" ng-model="s.filterByFields.location"/></th>
 				<th>
