--- a/modules/organizations/client/views/organization-list.html
+++ b/modules/organizations/client/views/organization-list.html
@@ -22,7 +22,7 @@
 					sortable="'company'">{{o.company}}</td>
 				<td data-title="'Type'"
 					filter="{'companyType':'text'}"
-					sortable="'companyType'">{{o.companyType}}</td>
+					sortable="'companyType'">{{organizationTypes.display(o.companyType)}}</td>
 				<td data-title="'Company Legal'"
 					filter="{'companyLegal':'text'}"
 					sortable="'companyLegal'">{{o.companyLegal}}</td>
