MEM-298 - Ad hoc Edits
- Small content update to the fast-facts on the home page

--- a/modules/home/client/views/home.html
+++ b/modules/home/client/views/home.html
@@ -54,8 +54,8 @@
                             </li>
                             <li class=" col-xs-12 col-sm-6 col-lg-12">
                                 <div>
-                                    <span class="metric">8</span>
-                                    <span class="metric-desc">Number of Mines Under Review by the Environmental Assessment Office</span>
+                                    <span class="metric">6</span>
+                                    <span class="metric-desc">Number of environmental assessment applications for mining projects under review</span>
                                 </div>
                             </li>
                         </ul>
