--- a/modules/project-comments/client/views/public-comments/main.html
+++ b/modules/project-comments/client/views/public-comments/main.html
@@ -6,30 +6,34 @@
 
 <div class="view-body-container">
 
-    <div class="panel panel-default">
-        <div class="pcp-alert clearfix">
-            <h2>Public Comment Period is <span ng-if="isBefore">Scheduled</span><span ng-if="isOpen">Now Open</span><span ng-if="isClosed">Now Closed</span>.</h2>
-            <span class="pcp-dates">{{ period.dateStarted | amDateFormat:'MMMM Do, YYYY' }} &nbsp;-&nbsp; {{ period.dateCompleted | amDateFormat:'MMMM Do, YYYY' }}</span>
-            <button class="btn submit-comment-btn" ng-if="allowCommentSubmit" x-add-public-comment x-project="project" x-period="period">
-                Click Here to Submit a Comment
-            </button>
-        </div>
-        <div class="pcp-details">
-            <section class="pcp-about">
-                <h4 class="m-t-0">About this Comment Period...</h4>
-                <p ng-if="!period.instructions">No Description Available.</p>
-                <p ng-if="period.instructions">{{ period.instructions }}</p>
-            </section>
-            <section class="pcp-open-house" ng-if="period.openHouses.length > 0">
-                <h4>Open House Dates</h4>
-                    <ul>
-                        <li ng-repeat="h in period.openHouses">
-                            <strong>{{ h.eventDate | amDateFormat:'MMMM Do YYYY' }}</strong><span class="desc"> - {{ h.description }}</span>
-                        </li>
-                    </ul>
-            </section>
-        </div>
-    </div>
+	<div class="pcp-alert-container">
+		<div class="pcp-alert">
+			<div class="pcp-alert-info">
+				<h2>Public Comment Period is <span ng-if="isBefore">Scheduled</span><span ng-if="isOpen">Now Open</span><span ng-if="isClosed">Now Closed</span>.</h2>
+				<span class="pcp-dates">{{ period.dateStarted | amDateFormat:'MMMM Do, YYYY' }} &nbsp;-&nbsp; {{ period.dateCompleted | amDateFormat:'MMMM Do, YYYY' }}</span>
+			</div>
+			<div class="pcp-alert-btn">
+				<button class="btn" ng-if="allowCommentSubmit" x-add-public-comment x-project="project" x-period="period">
+					Click Here to Submit a Comment
+				</button>
+			</div>
+		</div>
+		<div class="pcp-details">
+			<section class="pcp-about">
+				<h4 class="m-t-0">About this Comment Period...</h4>
+				<p ng-if="!period.instructions">No Description Available.</p>
+				<p ng-if="period.instructions">{{ period.instructions }}</p>
+			</section>
+			<section class="pcp-open-house" ng-if="period.openHouses.length > 0">
+				<h4>Open House Dates</h4>
+				<ul>
+					<li ng-repeat="h in period.openHouses">
+						<strong>{{ h.eventDate | amDateFormat:'MMMM Do YYYY' }}</strong><span class="desc"> - {{ h.description }}</span>
+					</li>
+				</ul>
+			</section>
+		</div>
+	</div>
 
     <ul class="nav nav-tabs" role="tablist">
         <li class="active" role="presentation"><a href="#pcpComments" aria-controls="pcpComments" role="tab" data-toggle="tab">Comments</a></li>
