--- a/modules/documents/client/styles/file-browser.scss
+++ b/modules/documents/client/styles/file-browser.scss
@@ -474,7 +474,6 @@ a.icon-btn {
         }
 
         .row-actions {
-            display: none;
             position: absolute;
             top: 0.6rem;
             right: 2.5rem;
@@ -569,6 +568,24 @@ a.icon-btn {
                 .drill-in-btn {
                     display: inline-block;
                 }
+            }
+        }
+    }
+}
+
+@media (min-width: 1200px) {
+    .fb-list {
+        .fb-col-group {
+            .row-actions {
+                visibility: hidden;
+            }
+        }
+    }
+
+    .fb-list-item:hover {
+        .fb-col-group {
+            .row-actions {
+                visibility: visible;
             }
         }
     }
