--- a/modules/project-comments/client/views/period-list.html
+++ b/modules/project-comments/client/views/period-list.html
@@ -5,123 +5,134 @@
 	<h1>Comment Periods</h1>
 </div>
 
-<!-- PUBLIC COMMENT PERIOD IF ACTIVE -->
-<div class="panel panel-default" ng-if="activeperiod">
-	<div class="pcp-alert clearfix">
-		<div class="pull-left">
-			<h2>Public Comment Period is Now Open.</h2>
-			<span class="pcp-dates">{{ activeperiod.dateStarted | amDateFormat:'MMMM Do, YYYY' }} &nbsp;-&nbsp; {{ activeperiod.dateCompleted | amDateFormat:'MMMM Do, YYYY' }}</span>
+<div class="view-body-container">
+
+	<!-- PUBLIC COMMENT PERIOD IF ACTIVE -->
+	<div class="pcp-alert-container" ng-if="activeperiod">
+		<div class="pcp-alert clearfix">
+			<div class="pcp-alert-info">
+				<h2>Public Comment Period is Now Open.</h2>
+				<span class="pcp-dates">{{ activeperiod.dateStarted | amDateFormat:'MMMM Do, YYYY' }} &nbsp;-&nbsp; {{ activeperiod.dateCompleted | amDateFormat:'MMMM Do, YYYY' }}</span>
+			</div>
+			<div class="pcp-alert-btn">
+				<button class="btn" ng-if="allowCommentSubmit" x-add-public-comment x-project="project" x-period="activeperiod">
+					Click Here to Submit a Comment
+				</button>
+			</div>
 		</div>
-		<div class="pcp-comment-btn-container">
-			<button class="btn submit-comment-btn" ng-if="allowCommentSubmit" x-add-public-comment x-project="project" x-period="activeperiod">
-				Click Here to Submit a Comment
-			</button>
-		</div>
+	</div>
+
+	<div class="button-bar clearfix">
+		<a class="btn btn-default btn-sm" ng-if="project.userCan.createCommentPeriod" ui-sref="p.commentperiod.create()" title="Add Comment Period">
+			<span class="glyphicon glyphicon-plus"></span>
+			<span>Add Comment Period</span>
+		</a>
+		<!--
+		<show-filter x-toggle-filter="toggleFilter"></show-filter>
+		-->
+	</div>
+
+	<div class="table-container">
+		<table class="pcp-table" ng-table="tableParams" show-filter="toggleFilter">
+			<tr class="clickable" ng-repeat="p in $data"  ng-if="project.userCan.createCommentPeriod || p.isPublished"  ui-sref="p.commentperiod.detail({periodId:p._id})">
+				<td title="'Type'" sortable="'periodType'">
+					{{p.periodType}}
+				</td>
+				<td title="'Start Date'" sortable="'dateStarted'">
+					{{ p.dateStarted | date : format : timezone }}
+				</td>
+				<td title="'End Date'" sortable="'dateCompleted'">
+					{{ p.dateCompleted | date : format : timezone }}
+				</td>
+				<td class="documents-col" header-class="'documents-col'" title="'Documents'" sortable="'relatedDocuments.length'">
+					{{p.relatedDocuments.length}}
+				</td>
+				<td class="assigned-col" header-class="'assigned-col'" title="'Assigned'">
+					<i ng-if="p.isVetted" class="glyphicon glyphicon-ok"></i>{{p.stats.totalPublicAssigned}}
+				</td>
+				<td class="total-col" header-class="'total-col'" title="'Comments'">
+					{{p.stats.totalPublic}}
+				</td>
+				<td class="status-col" header-class="'status-col'" title="'Status'" sortable="'isPublished'" 
+					ng-if="project.userCan.createCommentPeriod">
+					<span ng-if="p.isPublished" title="Published"><span class="glyphicon glyphicon-ok-circle"></span></span>
+				</td>
+				<td class="table-row-actions" header-class="'table-row-actions'" 
+					ng-if="project.userCan.createCommentPeriod">
+					<div class="btn-group">
+						<button class="btn icon-btn dropdown-toggle" type="button" ng-click="$event.originalEvent.dropdown = true" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							<span class="glyphicon glyphicon glyphicon-option-vertical"></span>
+						</button>
+						<ul class="dropdown-menu pull-right">
+							<li ng-if="project.userCan.createCommentPeriod">
+								<a class="btn icon-btn" 
+									ui-sref="p.commentperiod.edit({periodId:p._id})"
+									ng-click="$event.stopPropagation();"><span class="glyphicon glyphicon-pencil"></span></a></li>
+							<li ng-if="!p.isPublished && project.userCan.createCommentPeriod">
+								<button class="btn icon-btn"
+									title="Publish Comment"
+									ng-click="$event.stopPropagation();"
+									x-confirm-dialog
+									x-title-text="'Publish Comment Period'"
+									x-ok-text="'Yes'"
+									x-cancel-text="'No'"
+									x-confirm-text="'Are you sure you want to publish this comment period?'"
+									x-on-ok="s.publishCommentPeriod"
+									x-ok-args="p">
+									<span class="glyphicon glyphicon-ok-circle"></span>
+								</button>
+							</li>
+							<li ng-if="p.isPublished && project.userCan.createCommentPeriod">
+								<button class="btn icon-btn"
+									title="Unpublish Comment"
+									ng-click="$event.stopPropagation();"
+									ng-disabled="p.openForComment"
+									x-confirm-dialog
+									x-title-text="'Unpublish Comment Period'"
+									x-ok-text="'Yes'"
+									x-cancel-text="'No'"
+									x-confirm-text="'Are you sure you want to unpublish this comment period?'"
+									x-on-ok="s.unpublishCommentPeriod"
+									x-ok-args="p">
+									<span class="glyphicon glyphicon-ban-circle"></span>
+								</button>
+							</li>
+							<li ng-if="project.userCan.createCommentPeriod && p.openForComment">
+								<button class="btn icon-btn"
+									title="Delete Comment Period"
+									ng-click="$event.stopPropagation();"
+									x-confirm-dialog
+									x-title-text="'Delete Comment Period'"
+									x-ok-text="'Yes'"
+									x-cancel-text="'No'"
+									x-confirm-text="'This comment period is currently open for public comment, are you sure you would like to permanently delete this comment period and all its content?'"
+									x-on-ok="s.deletePeriod"
+									x-ok-args="p">
+									<span class="glyphicon glyphicon-trash"></span>
+								</button>
+							</li>
+							<li ng-if="project.userCan.createCommentPeriod && !p.openForComment">
+								<button class="btn icon-btn"
+									title="Delete Comment Period"
+									ng-click="$event.stopPropagation();"
+									x-confirm-dialog
+									x-title-text="'Delete Comment Period'"
+									x-ok-text="'Yes'"
+									x-cancel-text="'No'"
+									x-confirm-text="'Are you sure you would like to permanently delete this comment period and all its content?'"
+									x-on-ok="s.deletePeriod"
+									x-ok-args="p">
+									<span class="glyphicon glyphicon-trash"></span>
+								</button>
+							</li>
+						</div>
+					</div>
+				</td>
+			</tr>
+			<tr class="no-records" ng-if="!$data || $data.length === 0">
+				<td colspan="4">No records found.</td>
+			</tr>
+		</table>
 	</div>
 </div>
-
-
-	<div class="view-body-container">
-		<div class="button-bar clearfix">
-			<a class="btn btn-default btn-sm" ng-if="project.userCan.createCommentPeriod" ui-sref="p.commentperiod.create()" title="Add Comment Period">
-				<span class="glyphicon glyphicon-plus"></span>
-				<span>Add Comment Period</span>
-			</a>
-			<show-filter x-toggle-filter="toggleFilter"></show-filter>
-		</div>
-		<section class="panel panel-default">
-			<table class="pcp-table table table-hover" ng-table="tableParams" show-filter="toggleFilter">
-				<tr class="clickable" ng-repeat="p in $data"  ng-if="project.userCan.createCommentPeriod || p.isPublished"  ui-sref="p.commentperiod.detail({periodId:p._id})">
-					<td title="'Type'" filter="{'periodType':'select'}" filter-data="s.typeArray" sortable="'periodType'">
-						{{p.periodType}}
-					</td>
-					<td title="'Status'" sortable="'isPublished'">
-						<span ng-if="p.isPublished" title="Published"><span class="glyphicon glyphicon-ok-circle"></span></span>
-					</td>
-					<td title="'Documents'" sortable="'relatedDocuments.length'">
-						{{p.relatedDocuments.length}}
-					</td>
-					<td title="'Starts'" sortable="'dateStarted'">
-						{{ p.dateStarted | date : format : timezone }}
-					</td>
-					<td title="'Completes'" sortable="'dateCompleted'">
-						{{ p.dateCompleted | date : format : timezone }}
-					</td>
-					<td class="pcp-count" header-class="'pcp-count'" title="'Assigned'" >
-						<i ng-if="p.isVetted" class="glyphicon glyphicon-ok"></i>{{p.stats.totalPublicAssigned}}
-					</td>
-					<td title="'Total Comments'" >
-						{{p.stats.totalPublic}}
-					</td>
-					<td class="actions-col action-x3" header-class="'actions-col action-x3'">
-						<a class="btn btn-default btn-sm"
-							ng-click="$event.stopPropagation()"
-							ng-if="project.userCan.createCommentPeriod"
-							ui-sref="p.commentperiod.edit({periodId:p._id})" href>
-							<span class="glyphicon glyphicon-pencil"></span>
-						</a>
-						<!-- Only one of the next two buttons appear. Depends on isPublished state of PCP.  Can change from unpublished to publish any time but
-								can only change from published to unpublished if the comment period is closed.
-						-->
-						<button class="btn btn-default btn-sm"
-										ng-if="!p.isPublished && project.userCan.createCommentPeriod"
-										title="Publish Comment"
-										ng-click="$event.stopPropagation();"
-										x-confirm-dialog
-										x-title-text="'Publish Comment Period'"
-										x-ok-text="'Yes'"
-										x-cancel-text="'No'"
-										x-confirm-text="'Are you sure you want to publish this comment period?'"
-										x-on-ok="s.publishCommentPeriod"
-										x-ok-args="p">
-							<span class="glyphicon glyphicon-ok-circle"></span>
-						</button>
-						<button class="btn btn-default btn-sm"
-										ng-if="p.isPublished && project.userCan.createCommentPeriod"
-										title="Unpublish Comment"
-										ng-click="$event.stopPropagation();"
-										ng-disabled="p.openForComment"
-										x-confirm-dialog
-										x-title-text="'Unpublish Comment Period'"
-										x-ok-text="'Yes'"
-										x-cancel-text="'No'"
-										x-confirm-text="'Are you sure you want to unpublish this comment period?'"
-										x-on-ok="s.unpublishCommentPeriod"
-										x-ok-args="p">
-							<span class="glyphicon glyphicon-ban-circle"></span>
-						</button>
-						<button class="btn btn-default btn-sm"
-								ng-if="project.userCan.createCommentPeriod && p.openForComment"
-								title="Delete Comment Period"
-								ng-click="$event.stopPropagation();"
-								x-confirm-dialog
-								x-title-text="'Delete Comment Period'"
-								x-ok-text="'Yes'"
-								x-cancel-text="'No'"
-								x-confirm-text="'This comment period is currently open for public comment, are you sure you would like to permanently delete this comment period and all its content?'"
-								x-on-ok="s.deletePeriod"
-								x-ok-args="p">
-							<span class="glyphicon glyphicon-trash"></span>
-						</button>
-						<button class="btn btn-default btn-sm"
-								ng-if="project.userCan.createCommentPeriod && !p.openForComment"
-								title="Delete Comment Period"
-								ng-click="$event.stopPropagation();"
-								x-confirm-dialog
-								x-title-text="'Delete Comment Period'"
-								x-ok-text="'Yes'"
-								x-cancel-text="'No'"
-								x-confirm-text="'Are you sure you would like to permanently delete this comment period and all its content?'"
-								x-on-ok="s.deletePeriod"
-								x-ok-args="p">
-							<span class="glyphicon glyphicon-trash"></span>
-						</button>
-					</td>
-				</tr>
-				<tr class="no-records" ng-if="!$data || $data.length === 0">
-					<td colspan="4">No records found.</td>
-				</tr>
-			</table>
-		</section>
-	</div>
 
