ESM-761: limit roles that can do vetting and classification - limit in UI and force limit on server.  Hide that project-system-admin actually has those roles.

--- a/modules/project-comments/client/views/period-edit.html
+++ b/modules/project-comments/client/views/period-edit.html
@@ -231,7 +231,8 @@
 					x-role-chooser
 					x-context="project"
 					x-current="period.vettingRoles"
-				    x-public="false"><span class="glyphicon glyphicon-pencil"></span><span>Edit Roles</span>
+				    x-public="false"
+				    x-allowed-roles="'assessment-lead,assessment-team,project-epd'"><span class="glyphicon glyphicon-pencil"></span><span>Edit Roles</span>
 				</a>
 			</div>
 			<ul class="list-group">
@@ -245,7 +246,8 @@
 					x-role-chooser
 					x-context="project"
 					x-current="period.classificationRoles"
-				    x-public="false"><span class="glyphicon glyphicon-pencil"></span><span>Edit Roles</span>
+				    x-public="false"
+				    x-allowed-roles="'assessment-lead,assessment-team,proponent-lead,proponent-team'"><span class="glyphicon glyphicon-pencil"></span><span>Edit Roles</span>
 				</a>
 			</div>
 			<ul class="list-group">
